--- a/resources/assets/sass/modules/_header.scss
+++ b/resources/assets/sass/modules/_header.scss
@@ -1,17 +1,15 @@
 .header {
-  nav {
-    position: fixed;
-    left: 0%;
-    righ: 0;
-    top: 0;
-    height: 70px;
-    line-height: 70px;
-    width: 100%;
-    z-index: 100;
-    border-bottom:1px solid #ccc;
-    padding-left: 20%;
-    background-color: rgba(255,250,240, 0.8);
-  }
+  position: fixed;
+  left: 0%;
+  righ: 0;
+  top: 0;
+  z-index: 100;
+  border-bottom: 1px solid #ccc;
+  padding-left: 20%;
+  background-color: rgba(255, 250, 240, 0.8);
+  height: 70px;
+  line-height: 70px;
+  width: 100%;
 }
 
 .header__logo {
@@ -35,4 +33,5 @@
   float: left;
   padding: 0 20px;
   margin: 0;
+  line-height: 70px;
 }
